<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_comment"
        android:textSize="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_comment">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_hint"
            android:inputType="textCapSentences"
            android:textColor="@color/secondary_text_color"
            android:textColorHint="@color/secondary_text_color"
            android:textSize="@dimen/edit_text_text_size"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_button_rounded"
        android:gravity="center"
        android:paddingTop="@dimen/add_location_save_btn_paddingTopBottom"
        android:paddingBottom="@dimen/add_location_save_btn_paddingTopBottom"
        android:text="@string/save_text"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_description" />

</androidx.constraintlayout.widget.ConstraintLayout>