<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_poi_scene">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_fav"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/toolbar_button_horizontal"
            android:contentDescription="@string/toggle_favourites_content_description"
            android:padding="@dimen/ic_fav_padding"
            android:src="@drawable/ic_fav_24" />

        <ImageView
            android:id="@+id/comment_section"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/toolbar_button_horizontal"
            android:contentDescription="@string/toggle_favourites_content_description"
            android:padding="@dimen/ic_fav_padding"
            android:src="@drawable/ic_baseline_comment_24" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/not_available"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <ImageView
        android:id="@+id/text_to_speech"
        android:layout_width="@dimen/poi_buttons"
        android:layout_height="@dimen/poi_buttons"
        android:layout_gravity="end"
        android:contentDescription="@string/speech_to_text"
        android:layout_marginEnd="@dimen/speech_to_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        android:padding="@dimen/ic_fav_padding"
        android:src="@drawable/ic_speak_aloud" />
    <ImageView
        android:id="@+id/remove_button"
        android:layout_width= "@dimen/poi_buttons"
        android:layout_height="@dimen/poi_buttons"
        android:layout_gravity="end"
        android:contentDescription="@string/speech_to_text"
        android:layout_marginEnd="@dimen/poi_button_margins"
        app:layout_constraintEnd_toStartOf="@id/text_to_speech"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        android:padding="@dimen/ic_fav_padding"
        android:src="@drawable/ic_baseline_delete_24" />
    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="@dimen/poi_buttons"
        android:layout_height="@dimen/poi_buttons"
        android:layout_gravity="end"
        android:contentDescription="@string/speech_to_text"
        android:layout_marginEnd="@dimen/poi_button_margins"
        app:layout_constraintEnd_toStartOf="@id/remove_button"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        android:padding="@dimen/ic_fav_padding"
        android:src="@drawable/ic_baseline_edit_24" />
    <CheckBox
        android:id="@+id/visited_btn"
        android:layout_width="@dimen/poi_buttons"
        android:layout_height="@dimen/poi_buttons"
        android:layout_margin="@dimen/poi_button_margins"
        android:textOn=""
        android:textOff=""
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        android:onClick="onCheckboxClicked"/>



    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/not_available"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:background="@color/grey"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>